//changing button color

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -200,7 +200,7 @@
         android:textSize="26dp"
         android:layout_gravity="center"
         android:textAlignment="center"
-        android:background="@android:color/holo_blue_light"
+        android:background="@android:color/holo_green_dark"
         android:padding="15dp"
         android:textColor="@android:color/black"/>
 
